[project]
name = "project-update-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "psycopg2>=2.9.10",
    "ruff>=0.11.10",
    "sqlalchemy>=2.0.41",
]
